Sat Jul  5 20:53:42 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* gnubg.c: replace 'const' with ICONV_CONST to get rid of compiler
	warning.

Thu Jul 7 15:02 GMT 2003 Jim Segrave jes@jes-2.demon.nl

	* openurl.c gtktheory.c gtkboard.c osr.c eval.c gnubg.c
	  htmlimages.c export.c lib/event.c
	  fixes for compiler warnings - unused variables removed, 
	  cast added in gnubg.c, config.h included in event.c (and
	  fix of call to outputerr()), add explicit returns in eval.c
	  for reaching end of non-void function

Fri Jun 27 21:20 GMT 2003 Jim Segrave jes@jes-2.demon.nl

	* rollout.c - fix results after interupted rollouts

Fri Jun 27 22:15:52 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktheory.c: use clist widget for double, take, etc. points.

Fri Jun 27 20:42:14 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (BasicCubefulRollout): fix bug in variance reduction
	when rolling out as initial position.
	(reported on GammOnline).

Fri Jun 27 20:38:00 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktheory.c (TheoryUpdated, GTKShowTheory): use gtk_text for
	showing gammon values (allows copy'n'paste).

Wed Jun 25 21:13:29 2003  Joern Thyssen  <jth@gnubg.org>

	Implement luck adjusted results.
	(bug #4012, suggested by Magnar Naustdalslid)

	* analysis.c (updateStatContext): calculate values needed for
	luck adjusted results.
        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): show luck adjusted results.

	* matchequity.c (getMEAtScore): new function.

Mon Jun 24 00:03 GMT 2003 Jim Segrave jes@jes-2.demon.nl

	* Use deprecated gtk_spin_button_get_value_as_float, for gtk1.2
	  compatibility

Mon Jun 23 21:31 GMT 2003 Jim Segrave jes@jes-2.demon.nl

	* allow terminating rollouts early if all the standard errors are
	  below a user set fraction of the value
	  gnubg.c set.c gtkgame.c show.c rollout.c eval.h backgammon.h

Mon Jun 23 09:07:38 2003  Joseph Heled  <pepster@users.sourceforge.net>
